# simplipy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  release.yml  test-github-install.yml
examples/: example_robot.py  example_simple.py
simplipy/: __init__.py  example_robot.py  example_simple.py  main.py
simplipy/components/: __init__.py  analog.py  arm.py  drive.py  encoder.py  gyro.py  motors.py  nt.py  pid.py  pneumatics.py  servo.py  switch.py  vision.py
simplipy/ignore_comps/: gyro_full.py  pneumatics_full.py  servo_full.py
simplipy/utils/: __init__.py  config.py  errors.py  logger.py
